# Gravity-Physics-Project

./: CMakeLists.txt  README.md  TODO.txt  classObject.cpp  classObject.h  classPlanet.cpp  compile.sh  gravity_simulation  main.cpp  screen  windowtest
classes/: classObject.cpp  classObject.h  classObject.hpp  classPhysics.cpp  classPhysics.hpp  classWindow.cpp  window.h  window.hpp
glad/: glad.c
glad/include/glad/: glad.h
glad/src/: glad.c
include/glad/: glad.h
include/imageSupport/: loadTextures.hpp
src/: glad.c
